--- a/index.html
+++ b/index.html
@@ -5,5 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home page</title>
   </head>
-  <body></body>
+  <body>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, cum sequi.
+      Itaque cupiditate tenetur dolore delectus possimus vel saepe consectetur
+      doloribus minus dolores nesciunt, qui odit ab alias cumque a.
+    </p>
+  </body>
 </html>
