Revert "Obersrved the status changes"
This reverts commit f1003c9e19537b9a5d2eba1cc836bc57cb070e96.

--- a/index.html
+++ b/index.html
@@ -5,11 +5,5 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home page</title>
   </head>
-  <body>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, cum sequi.
-      Itaque cupiditate tenetur dolore delectus possimus vel saepe consectetur
-      doloribus minus dolores nesciunt, qui odit ab alias cumque a.
-    </p>
-  </body>
+  <body></body>
 </html>
